added additional colours

--- a/css/app.scss
+++ b/css/app.scss
@@ -5,7 +5,7 @@
 $primary-color: #000;
 $white-color: #fff;
 $grey-color: #999999;
-$orange-color: #000;
+$orange-color: #fc3e17;
 
 $body-font: "Maison Mono";
 $title-font: "Trade Gothic";
