--- a/css/app.scss
+++ b/css/app.scss
@@ -2,7 +2,7 @@
 @import "typography";
 
 
-$primary-color: #000;
+$primary-color: black;
 $white-color: #fff;
 $grey-color: #999999;
 $orange-color: #fc3e17;
@@ -16,7 +16,7 @@ $uppercase: uppercase;
 $mq-xlarge: 1000px;
 $mq-large: 800px;
 $mq-medium: 600px;
-$mq-small: 400px;
+$mq-small: 500px;
 
 
 @mixin drop-shadow() {
@@ -40,13 +40,13 @@ body {
     font-size: $body-size;
     text-transform: $uppercase;
 
-    // @include mq($mq-medium) {
-    //     background-color: yellow;
-    // }
+    @include mq($mq-medium) {
+        background-color: yellow;
+    }
 
-    // @include mq($mq-small) {
-    //     background-color: #000;
-    // }
+    @include mq($mq-small) {
+        background-color: #000;
+    }
 }
 
 a {
@@ -79,7 +79,8 @@ header {
         color: $primary-color;  
 
         @include mq($mq-small) {
-            display: none;
+            left: 30px;
+            transform: translateX(0);
           }
 
     }
