--- a/app.css
+++ b/app.css
@@ -16,81 +16,75 @@ time, mark, audio, video {
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline;
-}
+  vertical-align: baseline; }
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-  display: block;
-}
+  display: block; }
 
 body {
-  line-height: 1;
-}
+  line-height: 1; }
 
 ol, ul {
-  list-style: none;
-}
+  list-style: none; }
 
 blockquote, q {
-  quotes: none;
-}
+  quotes: none; }
 
 blockquote:before, blockquote:after,
 q:before, q:after {
-  content: "";
-  content: none;
-}
+  content: '';
+  content: none; }
 
 table {
   border-collapse: collapse;
-  border-spacing: 0;
-}
+  border-spacing: 0; }
 
 img, iframe {
   vertical-align: bottom;
-  max-width: 100%;
-}
+  max-width: 100%; }
 
 input, textarea, select {
-  font: inherit;
-}
+  font: inherit; }
 
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
-}
+  text-rendering: optimizeLegibility; }
 
 @font-face {
   font-family: "Maison Mono";
-  src: url(fonts/MaisonMono-Regular.woff);
-}
+  src: url(fonts/MaisonMono-Regular.woff); }
+
 @font-face {
   font-family: Trade Gothic;
-  src: url(fonts/TradeGothic-Bold.woff);
-}
+  src: url(fonts/TradeGothic-Bold.woff); }
+
 body {
   background-color: #fff;
-  color: #000;
+  color: black;
   font-family: "Maison Mono";
   line-height: 1.5;
   font-size: 24px;
-  text-transform: uppercase;
-}
+  text-transform: uppercase; }
+  @media (max-width: 600px) {
+    body {
+      background-color: yellow; } }
+  @media (max-width: 500px) {
+    body {
+      background-color: #000; } }
 
 a {
-  text-decoration: none;
-}
+  text-decoration: none; }
 
 /* =========== Header =========== */
 header {
   display: flex;
   align-items: center;
   font-size: 15px;
-  color: #000;
+  color: black;
   padding-left: 30px;
   width: 100%;
   position: fixed;
@@ -100,74 +94,61 @@ header {
   will-change: transform;
   height: 90px;
   transform: translate3d(0, -100%, 0);
-  transition: transform 1s 0.2s;
-}
-header a.social {
-  color: #000;
-}
-@media (max-width: 400px) {
+  transition: transform 1s 0.2s; }
   header a.social {
-    display: none;
-  }
-}
-header a h1 img.logo {
-  width: 120px;
-  position: fixed;
-  left: 50%;
-  top: 30px;
-  transform: translateX(-50%);
-}
-@media (max-width: 400px) {
+    color: black; }
+    @media (max-width: 500px) {
+      header a.social {
+        left: 30px;
+        transform: translateX(0); } }
   header a h1 img.logo {
-    left: 30px;
-    transform: translateX(0);
-  }
-}
-header div.menu-area {
-  position: fixed;
-  top: 0;
-  right: 0;
-  height: 90px;
-  width: 90px;
-}
-header div.menu-ball {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  background-color: #fff;
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  will-change: transform;
-  transform: translate(-50%, -50%);
-}
-header div.burger {
-  height: 2px;
-  width: 28px;
-  background-color: #000000;
-  -webkit-transform-origin: center center;
-  -ms-transform-origin: center center;
-  transform-origin: center center;
-  -webkit-transition: all 0.3s 0.2s;
-  -o-transition: all 0.3s 0.2s;
-  transition: all 0.3s 0.2s;
-}
-header div.nav-toggle {
-  display: flex;
-  flex-direction: column;
-  height: 18px;
-  justify-content: space-between;
-  will-change: transform;
-  padding: 5px 0;
-  transition: transform 0.5s;
-  cursor: pointer;
-  z-index: 99;
-  align-items: flex-end;
-}
+    width: 120px;
+    position: fixed;
+    left: 50%;
+    top: 30px;
+    transform: translateX(-50%); }
+    @media (max-width: 500px) {
+      header a h1 img.logo {
+        left: 30px;
+        transform: translateX(0); } }
+  header div.menu-area {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 90px;
+    width: 90px; }
+  header div.menu-ball {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background-color: #fff;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    will-change: transform;
+    transform: translate(-50%, -50%); }
+  header div.burger {
+    height: 2px;
+    width: 28px;
+    background-color: #000000;
+    -webkit-transform-origin: center center;
+    -ms-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-transition: all 0.3s 0.2s;
+    -o-transition: all 0.3s 0.2s;
+    transition: all 0.3s 0.2s; }
+  header div.nav-toggle {
+    display: flex;
+    flex-direction: column;
+    height: 18px;
+    justify-content: space-between;
+    will-change: transform;
+    padding: 5px 0;
+    transition: transform 0.5s;
+    cursor: pointer;
+    z-index: 99;
+    align-items: flex-end; }
 
 header.animated {
-  transform: translate3d(0, 0%, 0);
-}
-
-/*# sourceMappingURL=app.css.map */
+  transform: translate3d(0, 0%, 0); }
