--- a/app.css
+++ b/app.css
@@ -67,8 +67,7 @@ body {
   color: black;
   font-family: "Maison Mono";
   line-height: 1.5;
-  font-size: 24px;
-  text-transform: uppercase; }
+  font-size: 16px; }
   @media (max-width: 600px) {
     body {
       background-color: yellow; } }
@@ -153,6 +152,9 @@ header {
 header.animated {
   transform: translate3d(0, 0%, 0); }
 
+header a.white {
+  color: #ffffff; }
+
 /* =========== Menu =========== */
 div.menu {
   height: 100vh;
@@ -199,3 +201,34 @@ div.menu {
 
 div.menu.open {
   transform: translateY(0); }
+
+/* =========== About =========== */
+header a.social-about {
+  color: #fff; }
+
+main {
+  background-color: black;
+  color: #fff; }
+
+section.profile-hero {
+  height: 100vh;
+  width: 100%;
+  background-color: black; }
+
+section.hero-title {
+  height: 100vh;
+  margin-top: -44%; }
+  section.hero-title h1 {
+    font-size: 53vw;
+    color: #fff;
+    text-transform: uppercase; }
+
+section.profile-content {
+  display: flex; }
+  section.profile-content p {
+    width: 50%;
+    float: right; }
+  section.profile-content div {
+    width: 50%; }
+  section.profile-content div img {
+    width: 300px; }
