--- a/app.css
+++ b/app.css
@@ -212,7 +212,7 @@ footer {
     footer div.footer-wrap div.credit {
       text-align: right; }
 
-/* =========== About =========== */
+/* =========== Profile =========== */
 header a.social-about {
   color: #fff;
   text-transform: uppercase; }
@@ -228,9 +228,10 @@ section.profile-hero {
 
 section.hero-title {
   height: 100%;
-  margin-top: -44%; }
+  margin-top: -40%; }
   section.hero-title h1 {
-    font-size: 53vw;
+    font-family: "Trade Gothic";
+    font-size: 50.5vw;
     color: #fff;
     text-transform: uppercase; }
 
@@ -242,7 +243,10 @@ section.profile {
     margin-bottom: 16px; }
   section.profile .profile-content {
     position: relative;
-    min-height: 100vh; }
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    padding: 30px; }
   section.profile div.content {
     width: 50%;
     margin-left: 50%; }
@@ -250,8 +254,11 @@ section.profile {
     width: 50%;
     position: absolute;
     left: 0;
-    top: 0;
-    transform: rotate(8deg); }
+    top: 50%;
+    transform: translateY(-50%) rotate(8deg);
+    display: flex;
+    align-items: center;
+    justify-content: center; }
   section.profile div.parallax-img img {
     width: 300px; }
   section.profile div.dot {
@@ -261,4 +268,4 @@ section.profile {
     border-radius: 50%;
     position: absolute;
     top: 0;
-    right: 0; }
+    right: 30px; }
