--- a/app.css
+++ b/app.css
@@ -62,6 +62,12 @@ input, textarea, select {
   font-family: Trade Gothic;
   src: url(fonts/TradeGothic-Bold.woff); }
 
+@keyframes loaderLine {
+  0% {
+    width: 0%; }
+  100% {
+    width: 100%; } }
+
 body {
   background-color: #fff;
   color: black;
@@ -71,6 +77,34 @@ body {
 
 a {
   text-decoration: none; }
+
+div.loader {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  position: fixed;
+  z-index: 999;
+  opacity: 1;
+  transition: opacity 0.8s ease;
+  pointer-events: none; }
+  div.loader div.loader-line {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 6px;
+    background-color: black;
+    animation: loaderLine 1s ease; }
+  div.loader div.loader-mask {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100%;
+    background-color: black;
+    transform-origin: right;
+    width: 100%;
+    transform: translateX(100%);
+    transition: transform 1.2s 1s ease; }
 
 /* =========== Header =========== */
 header {
@@ -83,7 +117,7 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 999;
+  z-index: 998;
   will-change: transform;
   height: 90px;
   transform: translate3d(0, -100%, 0);
@@ -150,7 +184,7 @@ div.menu {
   top: 0;
   left: 0;
   background-color: #fc3e17;
-  z-index: 998;
+  z-index: 997;
   display: flex;
   justify-content: center;
   align-items: center;
