--- a/css/app.scss
+++ b/css/app.scss
@@ -30,6 +30,27 @@ $mq-small: 500px;
 }
 
 
+@keyframes loaderLine {
+    0% {
+        width: 0%;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
+
+// @keyframes loaderMask {
+//     0% {
+//         transform: translateX(100%);
+//     }
+
+//     100% {
+//         transform: translateX(0%);
+//     }
+// }
+
+
 
 
 body {
@@ -63,6 +84,41 @@ a {
 // }
 
 
+div.loader {
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    position: fixed;
+    z-index: 999;
+    opacity: 1;
+    transition: opacity 0.8s ease;
+    pointer-events: none;
+
+    div.loader-line {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 6px;
+        background-color: $primary-color;
+        animation: loaderLine 1s ease;
+    }
+
+    div.loader-mask {
+        position: fixed;
+        top: 0;
+        right: 0;
+        height: 100%;
+        background-color:$primary-color;
+        transform-origin: right;
+        width: 100%; 
+        transform: translateX(100%);
+        transition: transform 1.2s 1s ease;
+    }
+
+}
+
+
 
 
 /* =========== Header =========== */
@@ -77,7 +133,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 999;
+    z-index: 998;
     will-change: transform;
     height: 90px;
     transform: translate3d(0, -100%, 0);
@@ -180,7 +236,7 @@ div.menu {
     top: 0;
     left: 0;
     background-color: $orange-color;
-    z-index: 998;
+    z-index: 997;
     display: flex;
     justify-content: center;
     align-items: center;
