--- a/app.css
+++ b/app.css
@@ -92,9 +92,9 @@ div.loader {
     top: 0;
     left: 0;
     width: 100%;
-    height: 6px;
+    height: 4px;
     background-color: black;
-    animation: loaderLine 1s ease; }
+    animation: loaderLine 1s cubic-bezier(0.72, 0, 0.01, 1); }
   div.loader div.loader-mask {
     position: fixed;
     top: 0;
