--- a/app.css
+++ b/app.css
@@ -68,6 +68,14 @@ input, textarea, select {
   100% {
     width: 100%; } }
 
+@keyframes fadeup {
+  0% {
+    transform: translateY(14px) rotate(12deg);
+    opacity: 0; }
+  100% {
+    transform: translateY(0px) rotate(0deg);
+    opacity: 1; } }
+
 body {
   background-color: #fff;
   color: black;
@@ -80,13 +88,16 @@ a {
 
 div.loader {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: white;
   position: fixed;
   z-index: 999;
   opacity: 1;
   transition: opacity 0.8s ease;
-  pointer-events: none; }
+  pointer-events: none;
+  font-family: Helvetica, sans-serif;
+  font-size: 12px;
+  color: #999999; }
   div.loader div.loader-line {
     position: fixed;
     top: 0;
@@ -95,16 +106,16 @@ div.loader {
     height: 4px;
     background-color: black;
     animation: loaderLine 1s cubic-bezier(0.72, 0, 0.01, 1); }
-  div.loader div.loader-mask {
-    position: fixed;
-    top: 0;
-    right: 0;
+  div.loader div.loader-page--description {
     height: 100%;
-    background-color: black;
-    transform-origin: right;
-    width: 100%;
-    transform: translateX(100%);
-    transition: transform 1.2s 1s ease; }
+    display: flex;
+    align-items: center;
+    padding: 40px; }
+    div.loader div.loader-page--description span {
+      margin-right: 3px;
+      overflow: hidden; }
+      div.loader div.loader-page--description span p {
+        transform: translateY(14px); }
 
 /* =========== Header =========== */
 header {
