--- a/css/app.scss
+++ b/css/app.scss
@@ -40,15 +40,10 @@ $mq-small: 500px;
     }
 }
 
-// @keyframes loaderMask {
-//     0% {
-//         transform: translateX(100%);
-//     }
-
-//     100% {
-//         transform: translateX(0%);
-//     }
-// }
+@keyframes fadeup {
+    0% {transform: translateY(14px) rotate(12deg); opacity: 0;}
+    100% {transform: translateY(0px) rotate(0deg); opacity: 1;}
+  }
 
 
 
@@ -86,13 +81,16 @@ a {
 
 div.loader {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: white;
     position: fixed;
     z-index: 999;
     opacity: 1;
     transition: opacity 0.8s ease;
     pointer-events: none;
+    font-family: Helvetica, sans-serif;
+    font-size: 12px;
+    color: $grey-color;
 
     div.loader-line {
         position: fixed;
@@ -104,19 +102,26 @@ div.loader {
         animation: loaderLine 1s cubic-bezier(.72,0,.01,1);
     }
 
-    div.loader-mask {
-        position: fixed;
-        top: 0;
-        right: 0;
+    div.loader-page--description {
         height: 100%;
-        background-color:$primary-color;
-        transform-origin: right;
-        width: 100%; 
-        transform: translateX(100%);
-        transition: transform 1.2s 1s ease;
+        display: flex;
+        align-items: center;
+        padding: 40px;
+
+        span {
+            margin-right: 3px;
+            overflow: hidden;
+
+            p {
+                transform: translateY(14px);
+            }
+
+        }
+
     }
 
 }
+
 
 
 
