--- a/app.css
+++ b/app.css
@@ -136,12 +136,16 @@ header {
   header a.social {
     color: black;
     text-transform: uppercase; }
-  header a h1 img.logo {
+  header a h1 svg {
     width: 120px;
     position: fixed;
     left: 50%;
     top: 30px;
-    transform: translateX(-50%); }
+    transform: translateX(-50%);
+    fill: white;
+    transition: fill 0.4s 0.2s cubic-bezier(0.72, 0, 0.01, 1); }
+  header a h1 svg.animated {
+    fill: black; }
   header div.menu-area {
     position: fixed;
     top: 0;
