--- a/app.css
+++ b/app.css
@@ -266,9 +266,9 @@ footer {
       width: 50%; }
     footer div.footer-wrap div.credit {
       text-align: right; }
-    footer div.footer-wrap div.social-links span {
+    footer div.footer-wrap span {
       overflow: hidden; }
-    footer div.footer-wrap div.social-links a {
+    footer div.footer-wrap a {
       margin-right: 20px;
       transform: translateY(14px);
       display: inline-block; }
