--- a/css/app.scss
+++ b/css/app.scss
@@ -320,6 +320,11 @@ footer {
 
         div.credit {
             text-align: right;
+
+
+            a:nth-child(1) {
+                margin-right: 0px; 
+            }
         }
 
         
