--- a/app.css
+++ b/app.css
@@ -359,3 +359,61 @@ section.profile {
     position: absolute;
     top: 0;
     right: 80px; }
+
+/* ====== Contact ====== */
+section.contact-hero {
+  min-height: 100vh;
+  width: 100%;
+  background-color: black; }
+
+section.contact-title {
+  height: 100vh;
+  display: flex;
+  margin-top: -25%;
+  position: relative; }
+  section.contact-title h1 {
+    font-family: "Trade Gothic";
+    font-size: 31vw;
+    color: #fff;
+    text-transform: uppercase;
+    line-height: 0.9; }
+    section.contact-title h1 span {
+      display: block; }
+  section.contact-title div.contact-page--links {
+    display: flex;
+    flex-direction: column;
+    margin-top: 60px; }
+    section.contact-title div.contact-page--links a {
+      color: #999999;
+      font-size: 13px;
+      text-transform: uppercase;
+      margin-bottom: 5px;
+      transition: color 0.3s ease;
+      display: inline-block; }
+      section.contact-title div.contact-page--links a:hover {
+        color: #fff; }
+  section.contact-title div.dot {
+    width: 80px;
+    height: 80px;
+    background-color: #fc3e17;
+    border-radius: 50%;
+    position: absolute;
+    top: 55%;
+    right: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2; }
+  section.contact-title div.dot-2 {
+    width: 80px;
+    height: 80px;
+    background-color: #fc3e17;
+    border-radius: 50%;
+    position: absolute;
+    bottom: 0;
+    left: 10%;
+    z-index: 2; }
+
+div.contact-info--wrap {
+  padding: 0 60px; }
+  div.contact-info--wrap div.emoji {
+    font-size: 22px;
+    margin-bottom: 30px; }
