--- a/css/app.scss
+++ b/css/app.scss
@@ -491,3 +491,95 @@ footer {
         }
 
   }
+
+
+
+
+
+
+  /* ====== Contact ====== */
+
+  section.contact-hero {
+    min-height: 100vh;
+    width:100%;
+    background-color: $primary-color;
+}
+
+
+
+section.contact-title {
+    height: 100vh;
+    display: flex;
+    margin-top: -25%;
+    position: relative;
+
+        h1 {
+            font-family: $title-font;
+            font-size: 31vw;
+            color: $white-color;
+            text-transform: $uppercase;
+            line-height: 0.9;
+
+            span {
+                display: block;
+            }
+
+        }
+
+        div.contact-page--links {
+            display: flex;
+            flex-direction: column;
+            margin-top: 60px;
+
+            a {
+                color: $grey-color;
+                font-size: $link-size;
+                text-transform: uppercase;
+                margin-bottom: 5px;
+                transition: color 0.3s ease;
+                display: inline-block;
+
+                &:hover {
+                    color: $white-color; 
+                }
+            }
+        }
+
+
+
+        div.dot {
+            width: 80px;
+            height: 80px;
+            background-color: $orange-color;
+            border-radius: 50%;
+            position: absolute;
+            top: 55%;
+            right: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 2;
+        }
+
+        div.dot-2 {
+            width: 80px;
+            height: 80px;
+            background-color: $orange-color;
+            border-radius: 50%;
+            position: absolute;
+            bottom: 0;
+            left: 10%;
+            z-index: 2;
+        }
+
+  }
+
+  div.contact-info--wrap {
+    padding: 0 60px;
+
+
+    div.emoji {
+        font-size: 22px;
+        margin-bottom: 30px;
+    }
+
+
+  }
